force-app/main/default/objects/insurance_details__dlm/fields/coverage_amount__c.field-meta.xml
<CustomField>
    <fullName>coverage_amount__c</fullName>
    <label>coverage_amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>coverage_amount</labelOverride>
        <masterLabel>coverage_amount</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>