force-app/main/default/objects/insurance_details__dlm/fields/currency_coverage__c.field-meta.xml
<CustomField>
    <fullName>currency_coverage__c</fullName>
    <label>currency_coverage</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>currency_coverage</labelOverride>
        <masterLabel>currency_coverage</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>