force-app/main/default/objects/insurance_details__dlm/fields/currency_premium__c.field-meta.xml
<CustomField>
    <fullName>currency_premium__c</fullName>
    <label>currency_premium</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>currency_premium</labelOverride>
        <masterLabel>currency_premium</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>