force-app/main/default/objects/insurance_details__dlm/fields/premium__c.field-meta.xml
<CustomField>
    <fullName>premium__c</fullName>
    <label>premium</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>premium</labelOverride>
        <masterLabel>premium</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>