force-app/main/default/objects/insurance_details__dlm/fields/rel_1767851828927_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1767851828927_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>insurance_details_SourceRecordId_map_rel</label>
    <referenceTo>TestDataLakeObj_0108__dlm</referenceTo>
    <relationshipLabel>insurance_details_SourceRecordId_map_rel</relationshipLabel>
    <relationshipName>rel_1767851828927_end</relationshipName>
    <type>Lookup</type>
</CustomField>