force-app/main/default/objects/insurance_details__dlm/fields/section__c.field-meta.xml
<CustomField>
    <fullName>section__c</fullName>
    <label>section</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>section</labelOverride>
        <masterLabel>section</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>